--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Attendnce Register Dates Generator</title>
+    <title>Attendance Register Dates Generator</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap.bundle.min.js"></script>
     <script src="logic.script.js"></script>
