--- a/index.html
+++ b/index.html
@@ -2,87 +2,86 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance Register Dates Generator</title>
-    <link href="bootstrap.min.css" rel="stylesheet">
-    <script src="bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="logic.script.js"></script>
-
-    <script lang="javascript" src="jquery-3.6.4.min.js"></script>
+    <script lang="javascript" src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 
-<body>
-    <div class="d-grid gap-2 col-6 mx-auto">
-        <img src="header fci new.png" class="img-fluid" alt="nust-fci-header">
-    </div>
+<body class="bg-light">
 
-    <div class="d-grid gap-2 col-6 mx-auto">
+    <!-- Header Section -->
+    <div class="container my-5 text-center">
+        <img src="header fci new.png" class="img-fluid mb-4" alt="nust-fci-header">
         <h2>CUS/ICT Attendance Register Creator</h2>
     </div>
-    <form id="form" class="d-grid gap-2 col-6 mx-auto">
-        <div class="form-floating mb-3">
-            <input type="text" required id="nameOfGroup" class="form-control" placeholder="CUS BLUE" />
-            <label for="nameOfGroup">Name of group</label>
-        </div>
 
+    <!-- Form Section -->
+    <div class="container">
+        <form id="form" class="bg-white p-4 shadow rounded">
 
-        <div class=" mb-3">
-            <label class="startingDate">Allowable starting day on the month</label>
-            <input type="date" required id="startingDate" class="form-control"
-                onchange="getPublicHolidaysFromAPI('NA',this.value)" />
-        </div>
-
-        <div class=" mb-3">
-            <label class="DaysToExclude"><b>Insert public holidays or days to exclude (separated by a semicolon ;
-                    )</b></label>
-            <input type="text" required id="DaysToExclude" class="form-control" />
-        </div>
-
-       <!--  <div class=" mb-3">
-            <label for="numberOfClassesPerWeek" class="form-label">Allowable number of classes per week</label>
-            <input type="number" min="1" max="4" value="0" required onchange="generateTimeSlotInputs(this.value)"
-                id="numberOfClassesPerWeek" inputmode="numeric" class="form-control" />
-        </div> -->
-
-        <div class=" mb-3">
-            <label for="numberOfClassesPerWeek" class="form-label">Enter allowable number of classes per week</label>
-            <input type="number" min="1" max="4" value="0" onchange="createTimeSlotInputsV2(this.value)"
-                id="numberOfClassesPerWeek" inputmode="numeric" class="form-control" />
-        </div>
-
-        <div class="row">
-            <div class="col">
-                <label for="timeslots">Day of the week:</label>
+            <!-- Name of Group Input -->
+            <div class="form-floating mb-3">
+                <input type="text" required id="nameOfGroup" class="form-control" placeholder="CUS BLUE" />
+                <label for="nameOfGroup">Name of Group</label>
             </div>
 
-            <div class="col">
-                <label for="timeslots">Start time:</label>
+            <!-- Starting Date Input -->
+            <div class="mb-3">
+                <label for="startingDate" class="form-label">Allowable Starting Day of the Month</label>
+                <input type="date" required id="startingDate" class="form-control" onchange="getPublicHolidaysFromAPI('NA', this.value)" />
             </div>
 
-            <div class="col">
-                <label for="timeslots">End time:</label>
+            <!-- Public Holidays/Days to Exclude Input -->
+            <div class="mb-3">
+                <label for="DaysToExclude" class="form-label"><b>Insert Public Holidays or Days to Exclude (separated by semicolons)</b></label>
+                <input type="text" required id="DaysToExclude" class="form-control" />
             </div>
-        </div>
 
-        <div id="timeslots">
+            <!-- Number of Classes per Week Input -->
+            <div class="mb-3">
+                <label for="numberOfClassesPerWeek" class="form-label">Enter Allowable Number of Classes per Week</label>
+                <input type="number" min="1" max="4" value="0" onchange="createTimeSlotInputsV2(this.value)" id="numberOfClassesPerWeek" inputmode="numeric" class="form-control" />
+            </div>
 
+            <!-- Timeslot Selection Section -->
+            <div class="mb-3">
+                <div class="row">
+                    <div class="col">
+                        <label for="timeslots" class="form-label">Day of the Week</label>
+                    </div>
+                    <div class="col">
+                        <label for="timeslots" class="form-label">Start Time</label>
+                    </div>
+                    <div class="col">
+                        <label for="timeslots" class="form-label">End Time</label>
+                    </div>
+                </div>
+                <div id="timeslots"></div>
+            </div>
 
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="d-grid gap-2 col-6 mx-auto">
-                    <input type="button" value="Generate Timeslots" onclick="handleSubmit()"
-                        class="btn btn-primary w-100" />
+            <!-- Submit and Reset Buttons -->
+            <div class="row mt-4">
+                <div class="col">
+                    <div class="d-grid gap-2">
+                        <input type="button" value="Generate Timeslots" onclick="handleSubmit()" class="btn btn-primary w-100" />
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="d-grid gap-2">
+                        <input type="reset" value="Reset" onclick="handleReset()" class="btn btn-warning w-100" />
+                    </div>
                 </div>
             </div>
+        </form>
+    </div>
 
-            <div class="col">
-                <div class="d-grid gap-2 col-6 mx-auto">
-                    <input type="reset" value="Reset" onclick="handleReset()" class="btn btn-warning w-100" />
-                </div>
-            </div>
-        </div>
-
-    </form>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
